--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@ featured_image: /images/social.jpg
 
 	<div class="wrap">
 
-		<h1>A beautiful, minimal two-column
-		portfolio theme built for Jekyll.</h1>
-		<p>Duet makes your work look simply awesome.</p>
+		<h1>Olá, eu sou o Jefferson.</h1>
+		<p>Sou pesquisador, projetista e desenho umas coisinhas.</p>
 
 	</div>
 
